[package]
name = "polling-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
cfg-if = { version = "1.0.0", optional = true }
polling = "2.8.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.37.18", default-features = false, features = ["std"], optional = true }

[features]
default = ["ping"]
ping = ["cfg-if", "rustix"]
