[package]
name = "polling-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
async-channel = { version = "1.8.0", optional = true }
blocking = { version = "1.3.1", optional = true }
cfg-if = { version = "1.0.0", optional = true }
futures-io = { version = "0.3.28", optional = true }
pin-project-lite = { version = "0.2.9", optional = true }
polling = "2.8.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.37.18", default-features = false, features = ["std"], optional = true }

[features]
default = ["channel", "future", "ping", "timer", "threadpool"]
channel = ["async-channel", "future"]
future = ["pin-project-lite", "ping"]
ping = ["cfg-if", "rustix"]
threadpool = ["blocking", "future", "futures-io"]
timer = ["ping"]
